Add: opening jobs CRUD
