# src/routes/api.php
@@ -16,6 +16,7 @@ use App\Http\Controllers\Api\RentRequestController;
 use App\Http\Controllers\Api\HomePageController;
 use App\Http\Controllers\Api\ContactController;
 use App\Http\Controllers\Api\LevelController;
+use App\Http\Controllers\Api\JobController;
 
 
 Route::prefix('v1')->middleware('api')->group(function () {
@@ -26,6 +27,7 @@ Route::prefix('v1')->middleware('api')->group(function () {
 
     Route::get('/contacts', [ContactController::class, 'index']);
     Route::get('/level/{id}', [LevelController::class, 'indexLevel']);
+    Route::get('/opening-jobs', [JobController::class, 'indexJobs']);
 
     Route::prefix('shop')->group(function () {
         Route::get('/categories', [ShopCategoryController::class, 'index'])->name('api-shop-category-list');
